<resources>
    <string name="app_name">MD Top</string>
    <string name="cardview">CardView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enabled">enabled</string>
    <string name="disable">disable</string>
    <string name="card_title_demo">This is a title</string>
    <string name="card_message_demo_small">This is a secondary text for a card with two lines in the message.</string>
    <string name="card_message_demo_large">This is a secondary text for a card with three lines in the message. We can show details about topic like specs.</string>
    <string name="card_secondary_demo">Secondary text</string>
    <string name="card_subtitle_demo">This is a subtitle</string>
    <string name="card_chip_demo">Chip</string>
    <string name="menu">Menú</string>
    <string name="inicio">Inicio</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="menu_popup_menu">popup menu</string>
    <string name="autocomplete">Autocompletar</string>
    <string name="dialog">Dialog</string>
    <string name="informativo">informativo</string>
    <string name="elegir">elegir</string>
    <string name="confirmar">confirmar</string>
    <string name="pantalla_completa">pantalla completa</string>
    <string name="dialog_ok">ok</string>
    <string name="dialog_confirm_title">Confirmar</string>
    <string name="dialog_confirm">Confirmar</string>
    <string name="dialog_cancel">cancelar</string>
    <string name="message_action_success">Pulsado confirmar</string>
    <string name="save">save</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">password</string>
    <string name="dialog_full_screen">Full Screen</string>
    <string name="appBar">appbar</string>
    <string name="app_bar_top">app bar top</string>
    <string name="app_bar_bottom">app bar bottom</string>
    <string name="picker">picker</string>
    <string name="picker_dialog">picker dialog</string>
    <string name="picker_fullscreen">picker fullscreen</string>
    <string name="picker_title">Seleccione fecha</string>
    <string name="dialog_negative">negative button</string>
    <string name="navigation_drawable">navigation drawable</string>
    <string name="modal_drawer">modal drawer</string>
    <string name="bottom_drawable">bottom drawable</string>
    <string name="sheets_standar_bottom">standar bottom</string>
    <string name="sheets_modal_bottom">model bottom</string>
    <string name="Sheets_bottom">sheets bottom</string>
    <string name="sheets_bottom_standar_place_title">Cursos Android ANT</string>
    <string name="sheets_bottom_standar_place_type">Courses online</string>
    <string name="sheets_bottom_standar_place_link">Webside</string>
    <string name="sheets_bottom_standar_place_call">call</string>
    <string name="sheets_bottom_standar_place_save">save</string>
    <string name="sheets_bottom_standar_place_timeline">2 days ago</string>
    <string name="sheets_bottom_standar_place_address">6458 Main Street</string>
    <string name="sheets_bottom_standar_place_schedule">Closed</string>
    <string name="sheets_bottom_standar_place_make_question">Ask something</string>
    <string name="hint_username">Username</string>
    <string name="user">user</string>
    <string name="motion">Motion</string>
    <string name="description_floatingActionButton">botón con motion</string>
    <string name="setting">Setting</string>
    <string name="motion_button_back">back</string>
    <string name="motion_button_next">next</string>
    <string name="TextFields">Text Fields</string>
    <string name="textFields_email">Correo</string>
    <string name="gmail">\@gmail.com</string>
</resources>