<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_cancel"
        android:title="@string/dialog_cancel"
        android:icon="@drawable/ic_close"/>
    <item
        android:id="@+id/action_app_bar_bottom"
        android:title="@string/app_bar_top"
        android:icon="@drawable/ic_border_bottom"/>
    <item
        android:id="@+id/action_full_sreen_dialog"
        android:title="@string/dialog_full_screen"
        android:icon="@drawable/ic_fullscreen"/>
    <item
        android:id="@+id/action_start"
        android:title="@string/inicio"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/action_favorites"
        android:title="@string/favoritos"
        android:icon="@drawable/ic_favorite"/>
    <item
        android:id="@+id/action_profile"
        android:title="@string/perfil"
        android:icon="@drawable/ic_profile"/>
</menu>