<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AlertDialogFragment">

  <com.google.android.material.button.MaterialButton
      android:id="@+id/btnDialogInfo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/informativo"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDialogChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elegir"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDialogConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDialogFullScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pantalla_completa"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</androidx.appcompat.widget.LinearLayoutCompat>