<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/common_padding_default"
    app:behavior_hideable = "true"
    app:behavior_skipCollapsed="false"
    app:behavior_peekHeight="@dimen/sheet_bottom_standar_peek_height"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerHeader"
        android:layout_width="0dp"
        android:layout_height="@dimen/sheet_bottom_standar_peek_height"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnResize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_expand_less"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sheets_bottom_standar_place_title"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginTop="@dimen/common_padding_default"
            android:layout_marginEnd="@dimen/common_padding_default"
            android:layout_marginStart="@dimen/common_padding_default"
            app:layout_constraintStart_toEndOf="@id/btnResize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sheets_bottom_standar_place_type"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintStart_toStartOf="@id/tvName"
            app:layout_constraintEnd_toEndOf="@id/tvName"
            app:layout_constraintTop_toBottomOf="@id/tvName"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sheets_bottom_standar_place_call"
        android:textColor="@color/colorAccent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="@dimen/common_padding_default"
        android:drawableTop="@drawable/ic_call"
        app:drawableTint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnLink"
        app:layout_constraintTop_toBottomOf="@id/containerHeader"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sheets_bottom_standar_place_link"
        android:textColor="@color/colorAccent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:drawableTop="@drawable/ic_link"
        app:drawableTint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnCall"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sheets_bottom_standar_place_save"
        android:textColor="@color/colorAccent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:drawableTop="@drawable/ic_save"
        app:drawableTint="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@id/btnLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnCall"/>

    <View
        android:id="@+id/vDividerActions"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider_light"
        android:layout_marginTop="@dimen/common_padding_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLink"/>

    <TextView
        android:id="@+id/tvChornology"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sheets_bottom_standar_place_timeline"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_margin="@dimen/common_padding_default"
        android:drawableStart="@drawable/ic_timeline"
        app:drawableTint="@color/colorAccent"
        android:drawablePadding="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vDividerActions"/>

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sheets_bottom_standar_place_address"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_margin="@dimen/common_padding_default"
        android:drawableStart="@drawable/ic_location_on"
        app:drawableTint="@color/colorAccent"
        android:drawablePadding="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChornology"/>

    <TextView
        android:id="@+id/tvSchedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sheets_bottom_standar_place_schedule"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_margin="@dimen/common_padding_default"
        android:drawableStart="@drawable/ic_schedule"
        app:drawableTint="@color/colorAccent"
        android:drawablePadding="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddress"/>


    <View
        android:id="@+id/vDividerDescription"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider_light"
        android:layout_marginTop="@dimen/common_padding_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSchedule"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/card_message_demo_large"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_margin="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vDividerDescription"/>

    <View
        android:id="@+id/vDividerQuestions"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider_light"
        android:layout_marginTop="@dimen/common_padding_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"/>

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="@dimen/item_img_size"
        android:layout_height="@dimen/item_img_size"
        android:src="@drawable/ic_account_circle"
        app:tint="@android:color/darker_gray"
        android:layout_margin="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vDividerQuestions"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_default"
        android:hint="@string/sheets_bottom_standar_place_make_question"
        app:layout_constraintStart_toEndOf="@id/imgPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vDividerQuestions"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>




</androidx.constraintlayout.widget.ConstraintLayout>