<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/common_padding_default"
    tools:context=".CardViewFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_card_spacing"
        android:layout_marginEnd="@dimen/material_card_spacing"
        android:layout_marginTop="@dimen/material_card_spacing"
        android:clickable="true"
        android:focusable="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/common_padding_default"
            android:paddingStart="@dimen/common_padding_none"
            android:paddingEnd="@dimen/common_padding_default">
            
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCardSmall"
                android:layout_width="@dimen/card_img_size"
                android:layout_height="@dimen/card_img_size"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enabled"
                android:layout_marginTop="@dimen/common_padding_min"
                android:layout_marginStart="@dimen/common_padding_min"
                android:layout_marginEnd="@dimen/common_padding_min"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgCardSmall"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable"
                app:layout_constraintStart_toEndOf="@id/btnFirst"
                app:layout_constraintTop_toTopOf="@id/btnFirst"
                app:layout_constraintBottom_toBottomOf="@id/btnFirst"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/card_title_demo"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imgCardSmall"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/common_padding_default"
                android:layout_marginEnd="@dimen/common_padding_default"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/card_message_demo_small"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintStart_toStartOf="@id/tvTitle"
                app:layout_constraintEnd_toEndOf="@id/tvTitle"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintBottom_toTopOf="@id/btnFirst"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_min"
        android:layout_marginEnd="@dimen/common_padding_min"
        android:layout_marginTop="@dimen/common_padding_min">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageCardLarge"
                android:layout_width="0dp"
                android:layout_height="@dimen/item_img_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>



            <TextView
                android:id="@+id/tvTitleLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/card_title_demo"
                app:firstBaselineToTopHeight="@dimen/card_baseline_topTitle"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageCardLarge"
                android:layout_marginStart="@dimen/common_padding_default"
                android:layout_marginEnd="@dimen/common_padding_middle"/>

            <RatingBar
                android:id="@+id/rbScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="3.5"
                app:firstBaselineToTopHeight="@dimen/card_baseline_ratingBar"
                app:layout_constraintStart_toStartOf="@id/tvTitleLarge"
                app:layout_constraintTop_toBottomOf="@id/tvTitleLarge"
                style="?ratingBarStyleSmall" />

            <TextView
                android:id="@+id/tvSecondaryLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/card_secondary_demo"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:firstBaselineToTopHeight="@dimen/card_baseline_secondary"
                app:layout_constraintStart_toStartOf="@id/tvTitleLarge"
                app:layout_constraintEnd_toEndOf="@id/tvTitleLarge"
                app:layout_constraintTop_toBottomOf="@id/rbScore"/>

            <TextView
                android:id="@+id/tvMessageLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/card_message_demo_large"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:firstBaselineToTopHeight="@dimen/card_baseline_message"
                app:layout_constraintStart_toStartOf="@id/tvTitleLarge"
                app:layout_constraintEnd_toEndOf="@id/tvTitleLarge"
                app:layout_constraintTop_toBottomOf="@id/tvSecondaryLarge"/>

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/divider_light"
                android:layout_marginTop="@dimen/common_padding_middle"
                app:layout_constraintStart_toStartOf="@id/tvTitleLarge"
                app:layout_constraintEnd_toEndOf="@id/tvTitleLarge"
                app:layout_constraintTop_toBottomOf="@id/tvMessageLarge"/>

            <TextView
                android:id="@+id/tvSubtitleLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/card_subtitle_demo"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:firstBaselineToTopHeight="@dimen/card_baseline_message"
                app:layout_constraintStart_toStartOf="@id/tvTitleLarge"
                app:layout_constraintEnd_toEndOf="@id/tvTitleLarge"
                app:layout_constraintTop_toBottomOf="@id/divider"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFirstLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enabled"
                android:layout_marginStart="@dimen/common_padding_min"
                android:layout_marginBottom="@dimen/common_padding_min"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_chip_demo"
                android:layout_marginTop="@dimen/card_padding_container_variant"
                android:layout_marginBottom="@dimen/card_padding_container_variant2"
                app:layout_constraintStart_toStartOf="@id/tvTitleLarge"
                app:layout_constraintTop_toBottomOf="@id/tvSubtitleLarge"
                app:layout_constraintBottom_toTopOf="@id/btnFirstLarge"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_chip_demo"
                android:checkable="true"
                android:layout_marginStart="@dimen/common_padding_min"
                app:layout_constraintStart_toEndOf="@id/chipFirst"
                app:layout_constraintTop_toTopOf="@id/chipFirst"
                app:layout_constraintBottom_toBottomOf="@id/chipFirst"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipThird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_chip_demo"
                app:closeIconEnabled="true"
                android:layout_marginStart="@dimen/common_padding_min"
                app:layout_constraintStart_toEndOf="@id/chipSecond"
                app:layout_constraintTop_toTopOf="@id/chipSecond"
                app:layout_constraintBottom_toBottomOf="@id/chipSecond"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_chip_demo"
                android:checkable="true"
                app:checkedIcon="@drawable/ic_favorite"
                app:closeIconEnabled="true"
                android:layout_marginStart="@dimen/common_padding_min"
                app:layout_constraintStart_toEndOf="@id/chipThird"
                app:layout_constraintTop_toTopOf="@id/chipThird"
                app:layout_constraintBottom_toBottomOf="@id/chipThird"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.appcompat.widget.LinearLayoutCompat>